--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ nav{
     background-color: blue;
     padding:  10px;
 }
+
+footer{
+    background-color: black;
+    color:  white;
+    padding: 15px;
+}
